// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultBlockAppender should append a default block when input focused 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <WithDispatch(WithSelect(BlockDropZone)) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    onKeyDown={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    readOnly={true}
    role="button"
    type="text"
    value="Write your story"
  />
  <WithSelect(WithDispatch(InserterWithShortcuts)) />
  <WithSelect(Inserter)
    position="top right"
  >
    <WithSafeTimeout(WithSelect(WithDispatch(DotTip)))
      id="core/editor.inserter"
    >
      Welcome to the wonderful world of blocks! Click the “+” (“Add block”) button to add a new block. There are blocks available for all kind of content: you can insert text, headings, images, lists, and lots more!
    </WithSafeTimeout(WithSelect(WithDispatch(DotTip)))>
  </WithSelect(Inserter)>
</div>
`;

exports[`DefaultBlockAppender should match snapshot 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <WithDispatch(WithSelect(BlockDropZone)) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={[MockFunction]}
    onFocus={[MockFunction]}
    onKeyDown={[MockFunction]}
    readOnly={true}
    role="button"
    type="text"
    value="Write your story"
  />
  <WithSelect(WithDispatch(InserterWithShortcuts)) />
  <WithSelect(Inserter)
    position="top right"
  >
    <WithSafeTimeout(WithSelect(WithDispatch(DotTip)))
      id="core/editor.inserter"
    >
      Welcome to the wonderful world of blocks! Click the “+” (“Add block”) button to add a new block. There are blocks available for all kind of content: you can insert text, headings, images, lists, and lots more!
    </WithSafeTimeout(WithSelect(WithDispatch(DotTip)))>
  </WithSelect(Inserter)>
</div>
`;

exports[`DefaultBlockAppender should optionally show without prompt 1`] = `
<div
  className="editor-default-block-appender"
  data-root-uid=""
>
  <WithDispatch(WithSelect(BlockDropZone)) />
  <input
    aria-label="Add block"
    className="editor-default-block-appender__content"
    onClick={[MockFunction]}
    onFocus={[MockFunction]}
    onKeyDown={[MockFunction]}
    readOnly={true}
    role="button"
    type="text"
    value=""
  />
  <WithSelect(WithDispatch(InserterWithShortcuts)) />
  <WithSelect(Inserter)
    position="top right"
  >
    <WithSafeTimeout(WithSelect(WithDispatch(DotTip)))
      id="core/editor.inserter"
    >
      Welcome to the wonderful world of blocks! Click the “+” (“Add block”) button to add a new block. There are blocks available for all kind of content: you can insert text, headings, images, lists, and lots more!
    </WithSafeTimeout(WithSelect(WithDispatch(DotTip)))>
  </WithSelect(Inserter)>
</div>
`;
